# ArchLogicRAG

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/: wikiarch.json
docs/: from-scratch.md  wikiarch_README.md
src/agent/: __init__.py  chatbot.py  client.py  prompts.py  run_in_terminal.py
src/agent/rendering/: __init__.py  references.py
src/agent/workflows/: __init__.py  case_search.py  general_qa.py
src/common/: __init__.py  llm_client.py  replicate_api.py
src/pipeline/: download_dataset.py
src/pipeline/extraction/: __init__.py  archseek_augment.py  asset_inquiry.py  prompts.py  runner.py
src/pipeline/indexing/: __init__.py  chroma_index.py  cluster_build.py  cluster_utils.py  img_index.py  ingestion_parser.py  runner.py
src/retrieval/: img_retrieve.py  logic_retriever.py
src/retrieval/retriever_utils/: fusion_search.py  retriever_filters.py
src/web/: app.py  backend.py  website.py
src/web/templates/css/: style.css
src/web/templates/html/: index.html
src/web/templates/js/: chat.js
tests/test_pipeline/: test_extraction_runner.py  test_llm_client_env.py
